--- a/corrd/Dockerfile
+++ b/corrd/Dockerfile
@@ -1,4 +1,4 @@
-FROM solr:7.7
+FROM solr:7.7-alpine
 
 COPY --chown=solr solrcore/promising-practices /opt/solr/server/solr/mycores/promising-practices
 COPY --chown=solr opioid-research /opt/solr/server/solr-webapp/webapp/opioid-research
