--- a/eswat/Dockerfile
+++ b/eswat/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.7-slim
 
 WORKDIR /eswat
 
-COPY src/requirements.txt /eswat
+COPY src/requirements.txt .
 
 RUN pip install -r requirements.txt
 
-COPY src /eswat
+COPY src/ .
 
 EXPOSE 5000
 
