--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     build: eswat/.
     volumes:
       - "./eswat/src/system.sqlite:/eswat/system.sqlite"
+      - "./eswat/src/files/:/eswat/files"
     ports:
       - "5000:5000"
     depends_on:
