--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
     build: corrd/.
     volumes:
       - "corrd-data:/opt/solr/server/solr/mycores/promising-practices"
-    ports:
-      - "8983:8983"
 
   eswat:
     image: eswat
@@ -15,10 +13,13 @@ services:
     volumes:
       - "./eswat/src/system.sqlite:/eswat/system.sqlite"
       - "./eswat/src/files/:/eswat/files"
+
+  nginx:
+    image: nginx:1.17
     ports:
-      - "5000:5000"
-    depends_on:
-      - "corrd"
+      - "80:80"
+    volumes:
+      - "./nginx/nginx.conf:/etc/nginx/nginx.conf:ro"
 
 volumes:
   corrd-data:
