--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,32 +4,49 @@ http {
 
     server {
 
+        listen 80;
+
         location / {
-            proxy_pass http://corrd:8983/solr/opioid-research/;
+            proxy_pass         http://corrd:8983/solr/opioid-research/;
+            proxy_redirect     off;
         }
 
         location /solr/promising-practices/select {
-            proxy_pass http://corrd:8983/solr/promising-practices/select;
+            proxy_pass         http://corrd:8983/solr/promising-practices/select;
+            proxy_redirect     off;
         }
 
         location /solr/promising-practices/admin/luke {
-            proxy_pass http://corrd:8983/solr/promising-practices/admin/luke;
+            proxy_pass         http://corrd:8983/solr/promising-practices/admin/luke;
+            proxy_redirect     off;
         }
 
         location /solr/admin/cores {
-            proxy_pass http://corrd:8983/solr/admin/cores;
+            proxy_pass         http://corrd:8983/solr/admin/cores;
+            proxy_redirect     off;
         }
 
         location /eswat {
-            proxy_pass http://eswat:5000/eswat;
+            proxy_pass         http://eswat:5000/eswat;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
         }
 
         location /static {
-            proxy_pass http://eswat:5000/static;
+            proxy_pass         http://eswat:5000/static;
+            proxy_redirect     off;
         }
 
         location /api {
-            proxy_pass http://eswat:5000/api;
+            proxy_pass         http://eswat:5000/api;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
 }
