--- a/eswat/Dockerfile
+++ b/eswat/Dockerfile
@@ -10,4 +10,4 @@ COPY src/ .
 
 EXPOSE 5000
 
-CMD gunicorn --bind=0.0.0.0:5000 --workers=2 --access-logfile=- app:app
+CMD gunicorn --bind=0.0.0.0:5000 --workers=2 --access-logfile=- wsgi:app
